--- a/JCPresley/HTML/style.css
+++ b/JCPresley/HTML/style.css
@@ -1,6 +1,9 @@
 body, head, html {
     height: 100%;
+    
 }
+
+
 
 * {
     box-sizing: border-box;
@@ -8,16 +11,17 @@ body, head, html {
     padding: 0;
 }
 
-.background {
+body{
     background-image: url(pictures/blackfog.jpg);
     background-repeat: repeat;
-    height: 100%;
-    width: 100%;
+        height: 100%;
+        width: 100%;
     background-position: center;
-    background-size: cover;
-    min-height: 100vh;
+    background-size:cover;
     position: absolute;
     }
+
+    
 #sidebar {
     position: fixed;
     height: 100%;
@@ -47,14 +51,16 @@ body, head, html {
 .buttons button {
     border: none;
     display: block;
-    background-color: #ce3165;
-    color: #fdfbfb;
+    background-color: white;
+    color: black;
     border-radius: 20px;
     margin-bottom: 5px;
-    height: 40px;
-    width: 150px;
+    margin-left: 30%;
+    margin-top: 20%;
+    height: 20px;
+    width: 75px;
     cursor: pointer;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Prompt', sans-serif;
     font-size: 15px;
 }
 
@@ -70,8 +76,10 @@ button:hover {
 
 .social-panel {
     margin-top: 100%;
+ 
     margin-left: 25px;
-    padding-top: 40px;
+
+    padding-top: 30%;
 }
 
 
@@ -90,16 +98,24 @@ button:hover {
 }
 
 .homeimages{
-
-    margin-left: 20%;
-    margin-top: 0;
     display: block;
+    margin-left: 19.5%;
+    min-width: 600px;
+    left: 50%;
+    top:  50%;
+
+   
 }
 
 .homeimages img{
-        position: relative;
-    object-fit: contain;
-    padding-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    object-fit:cover;
+   
     height: 340px;
     width: 340px;
+    border-radius: 20px;
+   
+
 }
