--- a/JCPresley/HTML/stylecontact.css
+++ b/JCPresley/HTML/stylecontact.css
@@ -1,6 +1,9 @@
 body, head, html {
     height: 100%;
+    
 }
+
+
 
 * {
     box-sizing: border-box;
@@ -8,6 +11,45 @@ body, head, html {
     padding: 0;
 }
 
+body{
+    background-image: url(pictures/blackfog.jpg);
+    background-repeat: repeat;
+        height: 100%;
+        width: 100%;
+    background-position: center;
+    background-size:cover;
+    position: absolute;
+    }
+
+.contact{
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    position: absolute;
+    left: 53%;
+    top: 40%;
+    font-size: 51px;
+}
+.infoboxes{
+    position: absolute;
+    left: 55%;
+    top: 50%;
+    outline:0; 
+    height:25px; 
+    width: 215px; 
+    padding-left:20px; 
+    padding-right:20px;
+    padding-bottom: 10px;
+}
+
+.submitinfo{
+    position: absolute;
+    left: 59.5%;
+    top: 63%;
+    outline:0; 
+
+      
+}
+    
 #sidebar {
     position: fixed;
     height: 100%;
@@ -26,25 +68,31 @@ body, head, html {
     width: 280px;
     height: 150px;
     margin-top: 0;
+    padding-right: 15px;
+    margin-left: 15px
 }
 
 .side-panel {
     width: 150px;
-    margin-left: 75px;
-    margin-top: 60%;
+position: absolute;
+margin-left: 75px; 
+top: 35%;
+bottom: 65%;
 }
 
 .buttons button {
     border: none;
     display: block;
-    background-color: #ce3165;
-    color: #fdfbfb;
+    background-color: white;
+    color: black;
     border-radius: 20px;
     margin-bottom: 5px;
-    height: 40px;
-    width: 150px;
+    margin-left: 30%;
+    margin-top: 20%;
+    height: 20px;
+    width: 75px;
     cursor: pointer;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Prompt', sans-serif;
     font-size: 15px;
 }
 
@@ -59,64 +107,69 @@ button:hover {
 }
 
 .social-panel {
-    margin-top: 100%;
+    position: absolute;
     margin-left: 25px;
-    padding-top: 40px;
+    bottom:0%;
+    left: 35px;
+    
 }
 
 
 
-.buttons2 button, img {
+.buttons2 button{
     border: none;
-    height: 30px;
-    width: 30px;
-    margin-left: 25px;
-    bottom: 0;
-    left: 0;
+
+    padding-right: 15px;
+    background-color: white;
 }
 
 button:hover {
     cursor: pointer;
 }
 
-.contactsection{
-    margin-left: 45%;
-    margin-top: 15%;
-}
+.homeimages{
 
-.contactsection2{
-    margin-left: 45%;
-    margin-top: 0%;
- 
-}
-
-.contacttext{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 30px;
-  
-}
-.contactbuttons button{
-    margin-left: 5%;
-    margin-top: 5%;
-    border: none;
+    animation: deckSlide;
+    animation-duration: 4s;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     display: block;
-    background-color: #ce3165;
-    color: #fdfbfb;
+    float: right;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    margin-left: 425px;
+    align-items: center;
+}
+/* animated for later
+@keyframes deckSlide {
+    from{
+        display:none;
+        float: right;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        position: relative;
+        margin-left: 1000px;
+        filter: blur(25px);
+    }
+    to{
+        display: block;
+        float: right;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        position: relative;
+        margin-left: 425px;
+        align-items: center;
+    }
+}
+*/
+
+.homeimages img{
+  
+
+    object-fit:cover;
+    height: 340px;
+    width: 340px;
     border-radius: 20px;
-    margin-bottom: 5px;
-    height: 40px;
-    width: 150px;
-    cursor: pointer;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
+   
+
 }
-
-.contactbuttons button:hover{
-    height: 50px;
-    width: 180px;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-
-
